# qe_utils

./: README.md  pyproject.toml
qe_utils/: bands.py  io_file.py  namelist.py  plotband.py  projwfc.py  pwx_in.py  pwx_out.py
qe_utils/cli/: bands.py  command_script.py  projwfc.py  write_plotband.py
qe_utils/data/: QE_INPUT_PW.toml  README.md
qe_utils/lib/: README.md  make_qe_input_parameter_dict.py
qe_utils/old/: pw.py
tests/: test_bands.py  test_cli.py  test_io_file.py  test_namelist.py  test_plotband.py  test_projwfc.py  test_pwx_in.py  test_pwx_out.py
tests/models/: SrVO3_scf.in  bands.out  bandsx.out  nscf.out  plotband.in  plotband.out  pw2wan.out  pwscf.pdos_atm#1(Sr)_wfc#1(s)  pwscf.pdos_atm#1(Sr)_wfc#2(s)  pwscf.pdos_atm#1(Sr)_wfc#3(p)  pwscf.pdos_atm#1(Sr)_wfc#4(p)  pwscf.pdos_atm#10(V)_wfc#1(s)  pwscf.pdos_atm#10(V)_wfc#2(s)  pwscf.pdos_atm#10(V)_wfc#3(p)  pwscf.pdos_atm#10(V)_wfc#4(d)  pwscf.pdos_atm#11(V)_wfc#1(s)  pwscf.pdos_atm#11(V)_wfc#2(s)  pwscf.pdos_atm#11(V)_wfc#3(p)  pwscf.pdos_atm#11(V)_wfc#4(d)  pwscf.pdos_atm#12(O)_wfc#1(s)  pwscf.pdos_atm#12(O)_wfc#2(p)  pwscf.pdos_atm#13(O)_wfc#1(s)  pwscf.pdos_atm#13(O)_wfc#2(p)  pwscf.pdos_atm#14(O)_wfc#2(p)  pwscf.pdos_atm#15(O)_wfc#1(s)  pwscf.pdos_atm#15(O)_wfc#2(p)  pwscf.pdos_atm#16(O)_wfc#2(p)  pwscf.pdos_atm#17(O)_wfc#1(s)  pwscf.pdos_atm#17(O)_wfc#2(p)  pwscf.pdos_atm#18(O)_wfc#1(s)  pwscf.pdos_atm#18(O)_wfc#2(p)  pwscf.pdos_atm#19(O)_wfc#2(p)  pwscf.pdos_atm#2(Sr)_wfc#1(s)  pwscf.pdos_atm#2(Sr)_wfc#2(s)  pwscf.pdos_atm#2(Sr)_wfc#3(p)  pwscf.pdos_atm#2(Sr)_wfc#4(p)  (+49 more)
(+2 files in other folders)
