[tool.poetry]
name = "qe-utils"
version = "0.1.0"
description = ""
authors = ["ShotaNamerikawa <shota.namerikawa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
qe-tools = "^2.2.0"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
