[tool.poetry]
name = "qe-utils"
version = "0.1.0"
description = ""
authors = ["ShotaNamerikawa <shota.namerikawa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
qe-tools = "^2.2.0"
pytest = "^8.2.2"
click = "^8.1.7"

[tool.poetry.scripts]
make_qe_script = "qe_utils.cli.command_script:make_qe_command_script"
make_plotband_input = "qe_utils.cli.write_plotband:make_plotband_input"
projwfc = "qe_utils.cli.projwfc:projwfc"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
